--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -20,11 +20,10 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'about/about.scss';
 @import 'account/login/login.scss';
 @import 'admin/admin.scss';
-@import 'blog/blog.scss';
-@import 'contact/contact.scss';
 @import 'main/main.scss';
 @import 'main/navbar.scss';
 @import 'main/variables.scss';
+@import 'sandbox/sandbox.scss';
 @import 'work/work.scss';
 @import 'modal/modal.scss';
 // endinjector
