--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -10,274 +10,48 @@
   // box-sizing: border-box;
 }
 
-h1 {
-    font-family: 'Helvetica Neue', cursive;
-    font-size: 50px;
-    // color: $color1;
-    color: red;
-    text-align: center;
+.page-title {
+  position: absolute;
+  top: 25%;
+  left: 25%;
+  font-family: 'Helvetica';
+  font-size: 55px;
+  color: white;
+  text-align: center;
+  text-shadow: 4px 4px 4px #000;
 }
-h3 {
-    font-family: 'Helvetica Neue', cursive;
-    font-size: 30px;
-    // color: $color1;
-    text-align: center;
-}
-
-.emojis-wrapper {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin-top:40px;
-}
-
-.emoji {
-    border-radius: 50%;
-    position: relative;
-    width: 100px;
-    height: 100px;
-    background-color: $color1;
+.page-subtitle {
+  position: absolute;
+  top: 50%;
+  left: 25%;
+  font-family: 'Helvetica Neue', cursive;
+  font-size: 30px;
+  color: white;
+  text-shadow: 4px 4px 4px #000;
+  text-align: center;
 }
 
-.emoji1 {
-   
-    &:after, &:before {
-        position: absolute;
-        content: "";
-        height: 10px;
-        width: 10px;
-        background-color: $color2;
-        border-radius: 50%;
-        top: 48px;
-        animation: emoji1-face-move 5s ease-in-out infinite, emoji1-eyes-blink 2s ease-in-out infinite;
-        animation-direction: alternate;
-    }
-    
-    &:after {
-        left: 30px;
-        
-    }
-    
-    &:before {
-        
-        left: 85px;
-    }
-    
-    .mouth {
-        position: absolute;
-        height: 3px;
-        width: 35px;
-        background-color: $color2;
-        border-radius: 5px;
-        top: 68px;
-        left:45px;
-        animation: emoji1-face-move 5s ease-in-out infinite;
-        animation-direction: alternate;
-    }
+.main-body {
+  // position: absolute;
+  // top: 0;
+  background-image: url("../assets/images/AKLCtree.jpg");
+  background-position: center;
+  // opacity: 0.5;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 150px 0 150px 60px;
+  // padding: 10% 0;
+  width: calc(100% - 60px);
+  height: 400px;
+  box-shadow: 5px 5px 5px 0;
 }
 
-@keyframes emoji1-eyes-blink {
-    0% {
-        height: 10px;
-    }
-    97% {
-        height: 10px;
-    }
-    100% {
-        height: 0px;
-    }
-}
-
-@keyframes emoji1-face-move {
-    0% {
-        transform: translateX(0);
-    }
-    30% {
-        transform: translateX(0);
-    }
-    35% {
-        transform: translateX(-20px);
-    }
-    65% {
-        transform: translateX(-20px);
-    }
-    70% {
-        transform: translateX(-10px);
-    }
-    85% {
-        transform: translateX(-10px);
-    }
-    90% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(0);
-    }
-}
-
-.emoji2 {
-   
-    &:after, &:before {
-        position: absolute;
-        content: "";
-        height: 10px;
-        width: 10px;
-        background-color: $color2;
-        border-radius: 50%;
-        top: 48px;
-        animation: emoji2-face-move 4s ease-in-out infinite, emoji1-eyes-blink 2s ease-in-out infinite;
-    }
-    
-    &:after {
-        left: 18px;
-        
-    }
-    
-    &:before {
-        
-        left: 72px;
-    }
-    
-    .mouth {
-        position: absolute;
-        height: 22px;
-        overflow: hidden;
-        border-top: 4px solid $color5;
-        width: 30px;
-        background-color: $color3;
-        border-radius: 25px;
-        top: 68px;
-        left:35px;
-        animation: emoji2-face-move 4s ease-in-out infinite, emoji2-mouth-move 4s ease-in-out infinite;
-    }
-}
-
-@keyframes emoji2-face-move {
-    0% {
-        transform: translateY(0);
-    }
-    55% {
-        transform: translateY(0);
-    }
-    60% {
-        transform: translateY(-10px);
-    }
-    95% {
-        transform: translateY(-10px);
-    }
-    100% {
-        transform: translateY(0);
-    }
-}
-
-@keyframes emoji2-mouth-move {
-    0% {
-        height: 22px;
-        border-top: 4px solid $color5;
-    }
-    55% {
-        height: 22px;
-        width: 30px;
-        left:35px;
-        border-top: 4px solid $color5;
-    }
-    60% {
-        height: 10px;
-        width: 15px;
-        left:42px;
-        border-top: 4px solid $color1;
-    }
-    95% {
-        height: 10px;
-        width: 15px;
-        left:42px;
-        border-top: 4px solid $color1;
-    }
-    100% {
-        height: 22px;
-        width: 30px;
-        left:35px;
-        border-top: 4px solid $color5;
-    }
-}
-
-.emoji3 {
-   
-    &:after, &:before {
-        position: absolute;
-        content: "";
-        height: 10px;
-        width: 10px;
-        background-color: $color2;
-        border-radius: 50%;
-        top: 48px;
-        animation: emoji3-face-move 0.25s ease-in-out infinite, emoji1-eyes-blink 2s ease-in-out infinite;
-        animation-direction: alternate;
-
-    }
-    
-    &:after {
-        left: 18px;
-        
-    }
-    
-    &:before {
-        
-        left: 72px;
-    }
-    
-    .mouth {
-        position: absolute;
-        height: 22px;
-        top: 68px;
-        left:35px;
-        animation: emoji3-mouth-move 0.25s ease-in-out infinite;
-        animation-direction: alternate;
-        
-        &:before, &:after {
-            content: '';
-            border-radius: 100%;
-            position: absolute;
-
-            border: 3px solid transparent;
-            border-top: 3px solid $color2;
-            border-left: 3px solid $color2;
-            transform-origin: center center;
-        }
-
-        &:before {
-            height: 15px;
-            width: 15px;
-            transform: rotate(-45deg);
-            top: 0;
-            left: 5px;
-        }
-        
-        &:after {
-            height: 10px;
-            width: 10px;
-            transform: rotate(-90deg);
-            top: 12px;
-            left: 8px;
-        }
-    }
-}
-
-@keyframes emoji3-face-move {
-    0% {
-        transform: translatex(0);
-    }
-    100% {
-        transform: translateX(-3px);
-    }
-}
-
-@keyframes emoji3-mouth-move {
-    0% {
-        transform: translatex(0);
-    }
-    100% {
-        transform: translateX(-5px);
-    }
+#big-box {
+  width: 90000px;
+  // background: red;
+  color: white;
+  // height: 200px;
+  display: inline;
+  font-size: 300px;
+  white-space: nowrap;
 }
