--- a/client/app/main/navbar.scss
+++ b/client/app/main/navbar.scss
@@ -1,9 +1,19 @@
+html, body, div.ng-scope {
+  // height: 100%;
+  // width: 100%;
+}
+
 .body {
   padding: 0 0 0 60px;
   margin: 0;
   // background: rgba(17, 0, 17, 0.2);
-  height: 100%;
+  height: 105%;
   width: 100%;
+}
+
+.active {
+  border-right: 3px solid black;
+  font-size: 110%;
 }
 
 #menu {
@@ -30,14 +40,10 @@
       box-sizing: border-box;
       display: block;
       margin: 0;
-      height: 20%;
+      height: 25%;
       position: relative;
       text-align: center;
       width: 100%;
-      .active {
-        border-right: 3px solid black;
-        font-size: 110%;
-      }
       a {
         font-size: 14px;
         letter-spacing: 4.4px;
